// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductTileStatic /> it renders ProductTileStatic 1`] = `
<div
  className="mfui-product-tile-static"
>
  <div
    className="mfui-product-tile-static__constructor-pack"
    key="NaNминут"
  >
    1500 минут
  </div>
</div>
`;

exports[`<ProductTileStatic /> it renders ProductTileStatic with delim 1`] = `
<div
  className="mfui-product-tile-static"
>
  <div
    className="mfui-product-tile-static__constructor-pack"
    key="Безлимитный интернетundefinedundefined"
  >
    Безлимитный интернет
  </div>
</div>
`;
